--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -12,7 +12,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-6 text-center">
-                    <p class="s-color mt-5">Azamat Ikromov</p>
+                    <p class="s-color mt-5">{{info.mini_about}}</p>
                 </div>
             </div>
 
