--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,10 +3,11 @@
 
         <a class="name" href="/">
             {% comment %} <i class="fa fa-code"></i> {% endcomment %}
-             Abdelaali ES SALMI
+            Azamat Ikromov
         </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default"
+            aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa fa-bars text-white"></i>
         </button>
 
@@ -15,18 +16,20 @@
                 <div class="row">
                     <div class="col-10 collapse-brand">
                         <a href="javascript:void(0)" class="name">
-                            Abdelaali ES SALMI
+                            Azamat Ikromov
                         </a>
                     </div>
                     <div class="col-2 collapse-close text-center">
-                        <button type="button" class="navbar-toggler text-warning" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
+                        <button type="button" class="navbar-toggler text-warning" data-toggle="collapse"
+                            data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false"
+                            aria-label="Toggle navigation">
                             <i class="fas fa-plus"></i>
                         </button>
                     </div>
                 </div>
             </div>
 
-            
+
             <ul class="navbar-nav ml-lg-auto">
 
                 <li class="nav-item">
@@ -54,7 +57,7 @@
                     </a>
                 </li>
             </ul>
-            
+
         </div>
     </div>
 </nav>
