--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -8,7 +8,8 @@
             <small class="s-color">Welcome to my portfolio website!</small>
             <div class="animated">
                 Hey, I'm<br>
-                <span class="color-primary" id="animated-name"></span>
+                Azamat Ikromov
+                {% comment %} <span class="color-primary" id="animated-name"></span> {% endcomment %}
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-6 text-center">
