--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
             <div class="col-12 text-center">
                 <p>Copyright © {% now "Y" %} Azamat Ikromov . All rights reserved</p>
                 <p class="coder">Built with <i class="fa fa-heart text-danger"></i> in Django By <a
-                        href="https://github.com/abdlalisalmi">Azamat Ikromov</a></p>
+                        href="https://github.com/cleveraziko">Azamat Ikromov</a></p>
             </div>
         </div>
     </div>
